<resources>
    <string name="app_name">Blueblue</string>
    <string name="sms_login">短信验证码登录</string>
    <string name="phone_number">手机号码</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="verify_code">图片验证码</string>
    <string name="please_input_pic_veri">请输入图片验证码</string>
    <string name="sms_verify_code">短信验证码</string>
    <string name="please_input_sms">请输入短信验证码</string>
    <string name="ssdk_cmcc_get_vercode">获取验证码</string>
    <string name="login">登录</string>
    <string name="pw_login">账号密码登录</string>
    <string name="try_pw_login">使用账号密码登录</string>
    <string name="user_name">账号</string>
    <string name="input_phone_or_email">请输入手机号或邮箱</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="try_sms_login">使用短信验证码登录</string>
    <string name="start">开始</string>
    <string name="register">注册</string>
    <string name="sms_register">短信验证码注册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">加载中</string>
    <string name="blue_blue">Blueblue</string>
    <string name="login_register">注册/登录</string>
    <string name="system_settings">设置</string>
    <string name="message_push">消息推送</string>
    <string name="go_switch_on">去开启</string>
    <string name="password_setting">设置登录密码</string>
    <string name="login_out">退出登录</string>
    <string name="write_off">注销账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_register">注册账号</string>
    <string name="other_login_type">第三方直接登录</string>
    <string name="please_input_user">请输入你的账号</string>
    <string name="try_sms_register">使用短信验证码注册账号</string>
    <string name="try_pw_register">使用密码注册账号</string>
    <string name="cant_get_vercode">获取不到验证码</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">账号注册成功</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="register_failed">注册失败，请重试</string>
    <string name="sms_send_success">验证码已发送</string>
    <string name="error_sms_code">验证码不正确</string>
    <string name="login_by_phone">手机号登录</string>
    <string name="register_new_user">新用户注册</string>
    <string name="account_input">请输入账号</string>
    <string name="retrieve_password">找回密码</string>
    <string name="auto_login_success">自动登录成功</string>
    <string name="square">广场</string>
    <string name="address_book">通讯录</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="input_nickname_search">输入用户昵称搜索</string>
    <string name="mine">我的</string>
    <string name="nick_name">昵称:</string>
    <string name="phone">手机号：</string>
    <string name="email">邮箱：</string>
    <string name="add_contact">添加好友</string>
    <string name="id">ID:</string>
    <string name="unknown">unkown</string>
    <string name="search_by_input_nick_name">输入用户昵称进行搜索</string>
    <string name="new_friend_apply">新朋友申请</string>
    <string name="reject">拒绝</string>
    <string name="agree">同意</string>
    <string name="add_friend_success">添加好友成功</string>
    <string name="reject_friend_apply">已拒绝好友申请</string>
    <string name="send_request_success">已发送好友请求</string>
</resources>