<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="13dp"
            android:drawableStart="@mipmap/icon_back"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/system_settings"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/devide_line" />

    <RelativeLayout
        android:id="@+id/rl_message_push"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="12dp"
            android:text="@string/message_push"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_go_switch_on"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="22dp"
            android:layout_toStartOf="@+id/iv_mine_right"
            android:text="@string/go_switch_on"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_mine_right"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/icon_mine_right" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_password_setting"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:text="@string/password_setting"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/icon_mine_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_write_off"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:text="@string/write_off"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/icon_mine_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_out"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_radius6_red_bg_black_stroke">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_out"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>


</LinearLayout>