<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/img_background_root"
    tools:context=".ui.activity.addressbook.PersonalInfoActivity">

    <RelativeLayout
        android:paddingHorizontal="10dp"
        android:id="@+id/rl_setting_title_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            app:drawableEndCompat="@mipmap/icon_back" />

        <ImageView
            android:id="@+id/iv_search_buddy"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="24dp"
            android:src="@mipmap/icon_search" />

    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_buddy_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_info_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/nick_name"
            android:textColor="#333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:singleLine="true"
            android:textColor="#666"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/devide_line"/>

    <LinearLayout
        android:id="@+id/ll_info_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/id"
            android:textColor="#333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_info_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:singleLine="true"
            android:textColor="#666"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/devide_line"/>

    <LinearLayout
        android:id="@+id/ll_info_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/phone"
            android:textColor="#333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_info_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:singleLine="true"
            android:textColor="#666"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/devide_line"/>

    <LinearLayout
        android:id="@+id/ll_info_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/email"
            android:textColor="#333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_info_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:singleLine="true"
            android:textColor="#666"
            android:textSize="18sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:background="@color/devide_line"/>

    <TextView
        android:id="@+id/tv_add_contact"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_login_btn_enable"
        android:text="@string/add_contact"
        android:textColor="@color/black"
        android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/empty_buddy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/search_by_input_nick_name"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"/>

    </LinearLayout>

</LinearLayout>