<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_radius6_white_bg_gray_stroke"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/input_nickname_search"
            android:textColor="#333"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="22dp">

            <EditText
                android:id="@+id/et_dialog_input"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_height="28dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight= "16dp"
                android:paddingStart="5dp"
                android:paddingEnd="30dp"
                android:maxLength="50"
                android:background="@drawable/shape_radius6_white_bg_gray_stroke"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <ImageView
                android:visibility="invisible"
                android:id="@+id/iv_dialog_input_clean"
                android:layout_width="25dp"
                android:layout_height="21dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="100dp"
                android:layout_marginEnd="21dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:src="@mipmap/icon_clean"
                />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="@color/devide_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_double_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#333"
                android:textSize="17sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/devide_line" />

            <Button
                android:id="@+id/bt_double_dialog_intput_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/sure"
                android:textColor="#DD444C"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>