<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/img_background_root"
    tools:context=".ui.fragment.AddressBookFragment">

    <RelativeLayout
        android:paddingHorizontal="10dp"
        android:id="@+id/rl_setting_title_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/address_book"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/iv_add_member"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:src="@mipmap/icon_addressbook_add" />

    </RelativeLayout>

    <RelativeLayout
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login_btn_dis_enable">

            <LinearLayout
                android:id="@+id/rl_center_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/icon_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/search"
                    android:textColor="#80000000" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_new_apply"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_new_friend_apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/shape_login_btn_enable"
            android:text="@string/new_friend_apply"
            android:gravity="center"
            android:textSize="18sp"/>


    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/sl_address_book_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_address_book" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>